add header section

--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
 </head>
 <body>
 
+    <header>
+        <ul>
+            <li></li>
+        </ul>
+    </header>
+
     hello world!
     hello my friend
+
     
 </body>
 </html>
